<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="475sp"
    >
    
    <LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    >
	    
        <TextView
		    android:id="@+id/alert_dialog_previous_sessions_heading"
		    android:background="@color/light_green"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="15sp"
		    android:text="@string/dialog_previous_sessions_heading"
		    android:textSize="14sp"
		    android:textColor="@color/white"
		    android:textStyle="bold"
		    />
	    
    </LinearLayout>
    
    <LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    >
    		
		<TextView
		    android:id="@+id/alert_dialog_previous_sessions_txt"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="15sp"
		    android:text="@string/dialog_previous_sessions_txt"
		    android:textSize="14sp"
		    android:singleLine="false"
		    android:textColor="@color/dark_grey"
		    android:textColorHint="@color/light_grey"
		    />
		
	</LinearLayout>
	
	<LinearLayout
	    style="?android:attr/buttonBarStyle"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal"
    	android:weightSum="2"
    	>
    	
	    <Button
	        style="?android:attr/buttonBarButtonStyle" 
		    android:id="@+id/alert_dialog_previous_sessions_btn_cancel"
		    android:layout_weight="1"
		    android:layout_width="0sp"
		    android:layout_height="wrap_content"
		    android:background="@drawable/main_menu_profile_bg"
	    	android:padding="15sp"
		    android:text="@string/dialog_previous_sessions_btn_cancel"
		    android:textColor="@drawable/main_menu_profile_txt"
		    android:textSize="14sp"
		    />
	    
	    <Button
	        style="?android:attr/buttonBarButtonStyle" 
		    android:id="@+id/alert_dialog_previous_sessions_btn_ok"
		    android:layout_weight="1"
		    android:layout_width="0sp"
		    android:layout_height="wrap_content"
		    android:background="@drawable/main_menu_profile_bg"
	    	android:padding="15sp"
		    android:text="@string/dialog_previous_sessions_btn_ok"
		    android:textColor="@drawable/main_menu_profile_txt"
		    android:textSize="14sp"
		    />
	    
	</LinearLayout>
    
</LinearLayout>
