<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#E2E2E2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="25sp"
    android:paddingRight="25sp"
    android:orientation="vertical"
    tools:context=".SignUp">
    
        <!-- welcome to visus header -->
        <TextView  
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:gravity="center_horizontal"
	    	android:layout_gravity="center"
	    	android:layout_marginTop="75dp"
	    	android:layout_marginBottom="25dp"
            android:text="@string/visus_welcome"
            android:textColor="@color/dark_grey"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        
	    <!-- first name -->
	    <EditText
	        android:id="@+id/first_name"
	        android:background="@color/white"
	        android:padding="15sp"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:layout_marginBottom="15dp"
	        android:hint="@string/hint_firstname"
	        android:inputType="textCapSentences"
	        android:textColor="@color/dark_grey"
	        android:textSize="12sp"
	        android:textColorHint="@color/dark_grey"
	        />
	    
	    <!-- gender -->
	    <Spinner
	        android:id="@+id/gender"
	        android:background="@color/white"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="15dp"
	        android:textColor="@color/dark_grey"
	        />
	    
	    <!-- age --> 
	    <EditText
	        android:id="@+id/age"
	        android:background="@color/white"
	        android:padding="15sp"
	        android:inputType="number"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:layout_marginBottom="15dp"
	        android:hint="@string/hint_age"
	        android:textColor="@color/dark_grey"
	        android:textSize="12sp"
	        android:textColorHint="@color/dark_grey"
	        />
	    
	    <!-- submit -->
	    <Button
	        android:id="@+id/register"
	        android:onClick="registerUser"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:paddingTop="15sp"
	        android:paddingBottom="15sp"
	        android:background="@drawable/new_user_submit_bg"
	        android:textColor="@drawable/new_user_submit_txt"
	        android:textSize="12sp"
	        android:text="@string/register"
	        android:gravity="center"
	        />
	    	    
</LinearLayout>