<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="0dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <LinearLayout
        android:background="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
    
        <!-- app name -->
	    <TextView
            android:layout_width="fill_parent" 
	        android:layout_height="wrap_content"
	        android:layout_weight="4"
            android:layout_gravity="center_horizontal"
        	android:paddingLeft="50sp"
        	android:paddingTop="10sp"
        	android:paddingBottom="0sp"
	        android:text="@string/app_name"
	        android:textAllCaps="true"
	        android:textStyle="bold"
	        android:textColor="@color/light_green"
	        android:textSize="64sp"
	        />
	    
	    <!-- sessions duration (hours) -->
	    <Button
	        android:background="@drawable/main_menu_profile_bg"
            android:layout_width="fill_parent" 
	        android:layout_height="wrap_content"
	        android:layout_weight="6"
            android:layout_gravity="left"  
        	android:paddingTop="20sp"   
        	android:paddingLeft="15sp"
        	android:paddingBottom="25sp"
            android:gravity="left"
	        android:text="Total\n47.5 HRS"
	        android:textAllCaps="true"
	        android:textStyle="bold"
	        android:textColor="@drawable/main_menu_profile_txt"
	        android:textSize="24sp"
	        />
	
	</LinearLayout>
	    
    <!-- new session button 
    
    	center
    -->
    <Button 
        android:background="@drawable/menu_press_bg"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="33.3"
        android:gravity="center"
        android:text="@string/title_activity_new_session"
        android:textColor="@drawable/menu_press_txt"
        android:textSize="42sp"
        android:onClick="newSession"
        />
    
    <!-- previous sessions button -->
    <Button 
        android:background="@drawable/menu_press_bg"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="33.3"
        android:text="@string/title_activity_prev_sessions"
        android:gravity="center"
        android:textColor="@drawable/menu_press_txt"
        android:textSize="42sp"
        android:onClick="prevSessions"
        />
    
    <!-- settings button -->
    <Button 
        android:background="@drawable/menu_press_bg"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="33.3"
        android:text="@string/title_activity_view_settings"
        android:gravity="center"
        android:textColor="@drawable/menu_press_txt"
        android:textSize="42sp"
        android:onClick="viewSettings"
        />

</LinearLayout>